# ORCHESTRA

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
config/: studio.example.yaml
docs/: cinematic-recording-plan.md  companion-setup.md  sdk-references.md  streamdeck-triggers.md
launchd/: com.dicheeko.orchestra.plist
native/orchestra-camera/: .gitignore  CMakeLists.txt  README.md
native/orchestra-camera/src/: sdktest.cpp
src/: beat-director.ts  capture-watchdog.ts  config.ts  dashboard.ts  health.ts  http.ts  index.ts  log.ts  monitor.ts  rename.ts  session.ts  switcher.ts
src/clients/: atem.ts  companion.ts  obs.ts
src/jobs/: sync.ts
test/: beat-director.test.ts  capture-watchdog.test.ts  companion.test.ts  config.test.ts  health.test.ts  monitor.test.ts  rename.test.ts  session-manager.test.ts  session.test.ts  switcher.test.ts
tools/: build-streamdeck-triggers.sh
